--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 django = "*"
 djangorestframework = "*"
-decouple = "*"
+python-decouple = "*"
 
 [dev-packages]
 autopep8 = "*"
