--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@
 asgiref==3.4.1; python_version >= '3.6'
 django==3.2.6
 djangorestframework==3.12.4
+gunicorn==20.1.0
 python-decouple==3.4
 pytz==2021.1
 sqlparse==0.4.1; python_version >= '3.5'
