--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.4.1
 dj-database-url==0.5.0
 Django==3.2.6
-django-heroku==0.0.0
+django-heroku
 djangorestframework==3.12.4
 gunicorn==20.1.0
 python-decouple==3.4
