--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "*"
 djangorestframework = "*"
 python-decouple = "*"
 gunicorn = "*"
+django-heroku = "*"
 
 [dev-packages]
 autopep8 = "*"
